--- a/index.html
+++ b/index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Simple Weather</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h1>Simple Weather</h1>
-
+  <div id="app">
+    <h1>Weather</h1>
     <form id="searchForm">
-        <input id="cityInput" type="text" placeholder="Enter city" required>
-        <button type="submit">Get Weather</button>
+      <input type="text" id="cityInput" placeholder="Enter city" required>
+      <button type="submit">Search</button>
     </form>
 
-    <p id="status" class="muted">Type a city and press “Get Weather”.</p>
+    <p id="status" class="muted"></p>
 
-    <section id="result" class="card" hidden>
-        <h2 id="cityName"></h2>
-        <div class="row">
-            <img id="icon" width="72" height="72" alt="">
-            <div>
-                <div id="temp" class="temp"></div>
-                <div id="desc" class="muted"></div>
-            </div>
-        </div>
-    </section>
+    <div id="result">
+      <h2 id="cityName"></h2>
+      <p id="temp"></p>
+      <p id="desc"></p>
+      <img id="icon" alt="weather icon">
+    </div>
 
-    <section id="forecast" class="card" hidden>
-        <h3>Next Days</h3>
-        <div id="forecastList" class="days"></div>
-    </section>
-</div>
+    <div id="forecast">
+      <h2>Forecast</h2>
+      <ul id="forecastList"></ul>
+    </div>
+  </div>
 
-<script src="logic.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
